--- a/web/themes/custom/nysenate_theme/src/patterns/global/global.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/global/global.scss
@@ -849,3 +849,8 @@ section.print.hero--senator {
   z-index: 5000;
   position: relative !important;
 }
+
+// Disable admin menu body padding when on TFA page.
+[dir="ltr"] body.gin--vertical-toolbar {
+  padding-left: 0 !important;
+}
